get(0) -> getFirst() in tests